# EvoArena

./: CMakeLists.txt  Graphics.cpp  Graphics.h  README.md  main.cpp  rapport_Evoarena_final.docx
assets/: specificationTechniques.docx
assets/json/: mutations.JSON
src/: Graphics.cpp  Graphics.h  Menu.cpp  Menu.h  constants.h  main.cpp
src/Entity/: Entity.cpp  Entity.h  Projectile.cpp  Projectile.h  TraitManager.cpp  TraitManager.h
src/core/: Simulation.cpp  Simulation.h
